overflow stopped

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@
 body {
   overflow-x: hidden;
 }
+ #root{
+  overflow: hidden;
+ }
 
 h1 {
   font-size: 3.5rem;
